# pdf

./: .gitignore  CMakeLists.txt  CONTROL  portfile.cmake
include/pdf/: color.hpp  config.hpp  document.hpp  page.hpp  point.hpp  rect.hpp  size.hpp  units.hpp
res/: config.cmake.in
src/pdf/: document.cpp  encode.hpp  page.cpp
